# fastapi_poetry

./: Dockerfile  README.md  history.txt  pyproject.toml
.github/workflows/: ci.yml
fastapi_poetry/: main.py  settings.py
tests/: test_status.py
