[tool.poetry]
name = "fastapi-poetry"
version = "0.1.0"
description = ""
authors = ["Yury Herasimau <yl.herasimau@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
httpx = "^0.23.3"
mypy = "^1.1.1"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
